<resources>
    <string name="app_name">quiz</string>
    <string name="ques1">Find the answer that best matches the stem pair in the analogy.</string>
    <string name="res1">SEDATIVE :: DROWSINESS</string>
    <string name="option1a">epidemic : contagiousness</string>
    <string name="option1b">laxative : drug</string>
    <string name="option1c">anesthetic : numbness</string>
    <string name="option1d">therapy : psychosis</string>
    <string name="ques2">Which one of the sets of letters below can be arranged into a five letter English word.</string>
    <string name="res2"> </string>
    <string name="option2a">a t r u n</string>
    <string name="option2b">t e c a r</string>
    <string name="option2c">m o h a t</string>
    <string name="option2d">e t l r n</string>
    <string name="ques3">Find the answer that best completes the analogy.</string>
    <string name="res3">FRUGAL : MISERLY :: RASH : ?</string>
    <string name="option3a">arrogant</string>
    <string name="option3b">profligate</string>
    <string name="option3c">spendthrift</string>
    <string name="option3d">foolhardy</string>
    <string name="ques4">Which number should come next in this series?</string>
    <string name="res4">10, 17, 26, 37, ?</string>
    <string name="option4a">46</string>
    <string name="option4b">52</string>
    <string name="option4c">50</string>
    <string name="option4d">56</string>
    <string name="ques5">If 10 people can do a piece of work in 5 days, working 2 hours a day, how long will 2 people take to do the same work, working 5 hours a day?
8</string>
    <string name="res5"> </string>
    <string name="option5a">8</string>
    <string name="option5b">10</string>
    <string name="option5c">5</string>
    <string name="option5d">12</string>
    <string name="ques6">Which number should come next in this series?</string>
    <string name="res6">10, 17, 26, 37, ?</string>
    <string name="option6a">46</string>
    <string name="option6b">52</string>
    <string name="option6c">50</string>
    <string name="option6d">56</string>
    <string name="ques7">Which word is a misfit in the following groups?</string>
    <string name="res7"> </string>
    <string name="option7a">Tibetan</string>
    <string name="option7b">Carstensz</string>
    <string name="option7c">Denali</string>
    <string name="option7d">Elbrus</string>
    <string name="ques8">At a conference, 12 members shook hands with each other before and after the meeting. How many total number of hand shakes occurred?</string>
    <string name="res8"> </string>
    <string name="option8a">100</string>
    <string name="option8b">132</string>
    <string name="option8c">145</string>
    <string name="option8d">144</string>
    <string name="ques9">The day after the day after tomorrow is four days before Monday. What day is it today?</string>
    <string name="res9"> </string>
    <string name="option9a">Monday</string>
    <string name="option9b">Tuesday</string>
    <string name="option9c">Wednesday</string>
    <string name="option9d">Sunday</string>
    <string name="ques10">A fisherman has 5 fishes (namely A, B, C,D, E) each having a different weight.Which of the following is the lightest?</string>
    <string name="res10">A weighs twice as much as B,B weighs four and a half times as much as C,C weighs half as much as D,D weighs half as much as E,E weighs less than A but more than C.</string>
    <string name="option10a">A</string>
    <string name="option10b">B</string>
    <string name="option10c">C</string>
    <string name="option10d">D</string>
    <string name="ques11">6121135 is to flame as 21215120 is to ?</string>
    <string name="res11"></string>
    <string name="option11a">voice</string>
    <string name="option11b">bald</string>
    <string name="option11c">caste</string>
    <string name="option11d">bloat</string>
    <string name="ques12">Forest is to tree as tree is to ?</string>
    <string name="res12"></string>
    <string name="option12a">plant</string>
    <string name="option12b">leaf</string>
    <string name="option12c">branch</string>
    <string name="option12d">fruits</string>
    <string name="ques13">Which of the following can be arranged into a 5-letter English word?</string>
    <string name="res13"></string>
    <string name="option13a">H R G S T</string>
    <string name="option13b">R I L S A</string>
    <string name="option13c">T O S M T</string>
    <string name="option13d">W Q R G S</string>
    <string name="ques14">Which conclusion can be drawn with absolute certainty from these two statements?</string>
    <string name="res14">All cats have fleas. Fleas are red.</string>
    <string name="option14a">All cats have red fleas</string>
    <string name="option14b">All fleas are on cats</string>
    <string name="option14c">Cats can sometimes have black fleas</string>
    <string name="option14d">Dogs never have red fleas</string>
    <string name="ques15">Marathon is to race as hibernation is to</string>
    <string name="res15"></string>
    <string name="option15a">isolate</string>
    <string name="option15b">dream</string>
    <string name="option15c">winter</string>
    <string name="option15d">sleep</string>
    <string name="ques16">Which word does NOT belong with the others?</string>
    <string name="res16"></string>
    <string name="option16a">inch</string>
    <string name="option16b">meter</string>
    <string name="option16c">ounce</string>
    <string name="option16d">yard</string>
    <string name="ques17">Look at this series: 7, 10, 8, 11, 9, 12, ... What number should come next?</string>
    <string name="res17"></string>
    <string name="option17a">10</string>
    <string name="option17b">7</string>
    <string name="option17c">12</string>
    <string name="option17d">13</string>
    <string name="ques18">If TRANSFER is coded as RTNAFSRE, then ELEPHANT would be coded as </string>
    <string name="res18"></string>
    <string name="option18a">LEPEHATN</string>
    <string name="option18b">LEPEAHTN</string>
    <string name="option18c">LEEPAHTN</string>
    <string name="option18d">LEPEAHNT</string>
    <string name="ques19">Only gentlemen can become members of the club. Many of the members of the club are officers. Some of the officers have been invited for dinner.</string>
    <string name="res19"></string>
    <string name="option19a">All the members of the club have been invited for dinner</string>
    <string name="option19b">Some of the officers are not gentlemen</string>
    <string name="option19c">All gentlemen are members of the club</string>
    <string name="option19d">Only gentlemen have been invited for dinner</string>
    <string name="ques20">Pointing to a man in a photograph, a woman said, "His brother's father is the only son of my grandfather." How is the woman related to the man in the photograph?</string>
    <string name="res20"></string>
    <string name="option20a">Sister</string>
    <string name="option20b">Aunt</string>
    <string name="option20c">Grandmother</string>
    <string name="option20d">Daughter</string>
</resources>
