<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muskanchotrani.quiz.quiz">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:id="@+id/number"
            android:text="1"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_below="@id/number"
            android:layout_margin="10dp"
            android:id="@+id/ques"
            android:text="@string/ques1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_below="@id/ques"
            android:layout_margin="10dp"
            android:id="@+id/resource"
            android:text="@string/res1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/resource"
            android:id="@+id/layoutone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A."
                android:layout_margin="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:id="@+id/optiona"
                android:text="@string/option1a" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layoutone"
            android:id="@+id/layouttwo">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B."
                android:layout_margin="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:id="@+id/optionb"
                android:text="@string/option1b" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layouttwo"
            android:id="@+id/layoutthree">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C."
                android:layout_margin="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:id="@+id/optionc"
                android:text="@string/option1c" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layoutthree"
            android:id="@+id/layoutfour">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D."
                android:layout_margin="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:id="@+id/optiond"
                android:text="@string/option1d" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>